--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -55,7 +55,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
-                        android:layout_marginRight="20dp"
                         android:textColor="@color/colorDarkBlue"
                         android:textSize="25sp" />
 
@@ -78,7 +77,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
-                        android:layout_marginRight="20dp"
                         android:textColor="@color/colorDarkBlue"
                         android:textSize="25sp" />
 
@@ -101,14 +99,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
-                        android:layout_marginRight="20dp"
                         android:textColor="@color/colorDarkBlue"
                         android:textSize="25sp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/event_month_long"
+                        android:text="@string/event_to_come"
                         android:textColor="@color/colorDarkBlue"
                         android:textSize="25sp" />
                 </LinearLayout>
@@ -162,7 +159,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="112dp"
-                        android:layout_marginRight="112dp"
                         android:textColor="@color/colorDarkBlue"
                         android:textSize="25sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -189,7 +185,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="112dp"
-                        android:layout_marginRight="112dp"
                         android:textColor="@color/colorDarkBlue"
                         android:textSize="25sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -216,7 +211,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="112dp"
-                        android:layout_marginRight="112dp"
                         android:textColor="@color/colorDarkBlue"
                         android:textSize="25sp"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -243,7 +237,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="112dp"
-                        android:layout_marginRight="112dp"
                         android:textColor="@color/colorDarkBlue"
                         android:textSize="25sp"
                         app:layout_constraintEnd_toEndOf="parent"
